About me page done

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-    <img src="../assets/logo.png" title="logo" alt="logo.png" width="70" height="50">
+<!--    <img src="../assets/logo.png" title="logo" alt="logo.png" width="70" height="50">-->
     <h3>Buddhika Pathum</h3>
     <nav>
         <a href="">Home</a>
@@ -17,18 +17,38 @@
         <a href="">Contact</a>
     </nav>
 </header>
-<!--Hero Page-->Page
-<div>
-    <h1> Hello There !!!!</h1>
-    <img src="../assets/logo.png" title="me" alt="logo.png">
-    <h4>Scroll down</h4>
-</div>
-<div>
-    <img src="../assets/logo.png" title="myself"  alt="logo.png">
-    <h2>About me</h2>
-    <p>Hi <br> I'm buddhika pathum. <br> A fullstack developer and Video game enthusiast and a music lover</p>
-</div>
-
+<!--Hero Page-->
+<section>
+    <div>
+        <h1> Hello There !!!!</h1>
+        <h3>I am Buddhika Pathum. A Software developer, Avid video gamer and Music Enthusiast. </h3>
+        <h4>Scroll down</h4>
+    </div>
+    <div>
+        <img src="../assets/logo.png" alt="myself.png" title="me">
+    </div>
+</section>
+<!--About me-->
+<section>
+    <h1>About me</h1>
+    <div>
+    <img src="../assets/logo.png" alt="myself2.png" title="me2">
+        <p>Hi,
+            I am Buddhika Pathum.
+            <br>
+            I am a software developer from Sri Lanka who specializes in Back-end developing.
+            <br>
+            Always trying to give 100% on everything I do, find inspiration and motivation through work and keep cool under pressure.</p>
+    </div>
+    <div>
+        <img src="../assets/logo.png" alt="myself3.png" title="me3">
+        <ul>Little facts about myself,
+            <li>I like to play video games or read books in my free time, immersing myself in the worlds they build, finding peace and serenity in fantasy adventures.</li>
+        <li>New technologies pique my interest, always trying out new technologies and services, getting a grasp on these new wonders.</li>
+        <li>Music is my meditation and food is my hobby 😉</li>
+        </ul>
+    </div>
+</section>
 <footer>
     <nav>
         <img src="../assets/logo.png" title="logo" alt="logo.png" width="30" height="20">
