Skills page done

--- a/html/index.html
+++ b/html/index.html
@@ -49,6 +49,15 @@
         </ul>
     </div>
 </section>
+<!--Skills page-->
+<section>
+    <div>
+        <h1>Skills</h1>
+<!--        pie chart -->
+<!--        loading strips-->
+    </div>
+</section>
+<!---->
 <footer>
     <nav>
         <img src="../assets/logo.png" title="logo" alt="logo.png" width="30" height="20">
