Portfolio-assginments done

--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,24 @@
 <!--        loading strips-->
     </div>
 </section>
-<!---->
+<!--Portfolio Page-->
+<section>
+    <h1>Portfolio</h1>
+    <div>
+        <h2>Projects</h2>
+        <a href=""><img src="../assets/logo.png" alt="assignemnt 1.png" title="assignment1." width="200" height="100"></a>
+        <a href=""><img src="../assets/logo.png" alt="assignemnt 1.png" title="assignment1." width="200" height="100"></a>
+        <br>
+        <a href=""><img src="../assets/logo.png" alt="assignemnt 1.png" title="assignment1." width="200" height="100"></a>
+        <a href=""><img src="../assets/logo.png" alt="assignemnt 1.png" title="assignment1." width="200" height="100"></a>
+        <br>
+        <a href=""><img src="../assets/logo.png" alt="assignemnt 1.png" title="assignment1." width="200" height="100"></a>
+        <a href=""><img src="../assets/logo.png" alt="assignemnt 1.png" title="assignment1." width="200" height="100"></a>
+    </div>
+    <div>
+        <h2>Assignments</h2>
+    </div>
+</section>
 <footer>
     <nav>
         <img src="../assets/logo.png" title="logo" alt="logo.png" width="30" height="20">
