Portfolio-projects done

--- a/html/index.html
+++ b/html/index.html
@@ -71,8 +71,17 @@
         <a href=""><img src="../assets/logo.png" alt="assignemnt 1.png" title="assignment1." width="200" height="100"></a>
         <a href=""><img src="../assets/logo.png" alt="assignemnt 1.png" title="assignment1." width="200" height="100"></a>
     </div>
+    <hr>
     <div>
         <h2>Assignments</h2>
+        <a href=""><img src="../assets/logo.png" alt="project1.png" title="project1" width="200" height="100"></a>
+        <a href=""><img src="../assets/logo.png" alt="project1.png" title="project1" width="200" height="100"></a>
+        <br>
+        <a href=""><img src="../assets/logo.png" alt="project1.png" title="project1" width="200" height="100"></a>
+        <a href=""><img src="../assets/logo.png" alt="project1.png" title="project1" width="200" height="100"></a>
+        <br>
+        <a href=""><img src="../assets/logo.png" alt="project1.png" title="project1" width="200" height="100"></a>
+        <a href=""><img src="../assets/logo.png" alt="project1.png" title="project1" width="200" height="100"></a>
     </div>
 </section>
 <footer>
