Experience Page done

--- a/html/index.html
+++ b/html/index.html
@@ -84,6 +84,30 @@
         <a href=""><img src="../assets/logo.png" alt="project1.png" title="project1" width="200" height="100"></a>
     </div>
 </section>
+<!--Experience Page-->
+<section>
+    <h1>Experience</h1>
+    <div>
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, architecto debitis doloremque nemo nihil quisquam saepe sapiente tenetur vitae. Aperiam assumenda blanditiis, consequuntur deserunt dignissimos, doloremque ea earum ex expedita hic, laborum libero magnam modi neque non nulla optio pariatur quidem reiciendis repellat sint soluta sunt tempora temporibus vitae. Vel.
+        </p>
+    </div>
+    <div>
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, architecto debitis doloremque nemo nihil quisquam saepe sapiente tenetur vitae. Aperiam assumenda blanditiis, consequuntur deserunt dignissimos, doloremque ea earum ex expedita hic, laborum libero magnam modi neque non nulla optio pariatur quidem reiciendis repellat sint soluta sunt tempora temporibus vitae. Vel.
+        </p>
+    </div>
+    <div>
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, architecto debitis doloremque nemo nihil quisquam saepe sapiente tenetur vitae. Aperiam assumenda blanditiis, consequuntur deserunt dignissimos, doloremque ea earum ex expedita hic, laborum libero magnam modi neque non nulla optio pariatur quidem reiciendis repellat sint soluta sunt tempora temporibus vitae. Vel.
+        </p>
+    </div>
+    <div>
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, architecto debitis doloremque nemo nihil quisquam saepe sapiente tenetur vitae. Aperiam assumenda blanditiis, consequuntur deserunt dignissimos, doloremque ea earum ex expedita hic, laborum libero magnam modi neque non nulla optio pariatur quidem reiciendis repellat sint soluta sunt tempora temporibus vitae. Vel.
+        </p>
+    </div>
+</section>
 <footer>
     <nav>
         <img src="../assets/logo.png" title="logo" alt="logo.png" width="30" height="20">
