Contact me done

--- a/html/index.html
+++ b/html/index.html
@@ -108,6 +108,41 @@
         </p>
     </div>
 </section>
+<!--Contact Me-->
+<section>
+    <h1>Contact me</h1>
+    Want to get in touch with me [Y/N] ?
+    <br>
+    Send an E-mail down below
+    <br>
+    <form>
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name">
+        <br>
+        <br>
+        <label for="message">Message</label>
+        <br>
+        <textarea
+            id="message"
+            name="textarea"
+            rows="10"
+            cols="100">
+        </textarea>
+        <br>
+        <button type="submit">Send Me</button>
+    </form>
+    <div>
+        Follow me on :
+        <a href=""><button type="button"><img src="../assets/logo.png" alt="logobutton" title="logobutton" width="30" height="20"></button> </a>
+        <a href=""><button type="button"><img src="../assets/logo.png" alt="logobutton" title="logobutton" width="30" height="20"></button> </a>
+        <a href=""><button type="button"><img src="../assets/logo.png" alt="logobutton" title="logobutton" width="30" height="20"></button> </a>
+        <a href=""><button type="button"><img src="../assets/logo.png" alt="logobutton" title="logobutton" width="30" height="20"></button> </a>
+        <a href=""><button type="button"><img src="../assets/logo.png" alt="logobutton" title="logobutton" width="30" height="20"></button> </a>
+        <a href=""><button type="button"><img src="../assets/logo.png" alt="logobutton" title="logobutton" width="30" height="20"></button> </a>
+    </div>
+</section>
 <footer>
     <nav>
         <img src="../assets/logo.png" title="logo" alt="logo.png" width="30" height="20">
