--- a/html/index.html
+++ b/html/index.html
@@ -9,16 +9,16 @@
 <!--    <img src="../assets/logo.png" title="logo" alt="logo.png" width="70" height="50">-->
     <h3>Buddhika Pathum</h3>
     <nav>
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Skills</a>
-        <a href="">Portfolio</a>
-        <a href="">Experience</a>
-        <a href="">Contact</a>
+        <a href="#home">Home</a>
+        <a href="#about-me">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#experience">Experience</a>
+        <a href="#contact-me">Contact</a>
     </nav>
 </header>
 <!--Hero Page-->
-<section>
+<section id="home">
     <div>
         <h1> Hello There !!!!</h1>
         <h3>I am Buddhika Pathum. A Software developer, Avid video gamer and Music Enthusiast. </h3>
@@ -29,7 +29,7 @@
     </div>
 </section>
 <!--About me-->
-<section>
+<section id="about-me">
     <h1>About me</h1>
     <div>
     <img src="../assets/logo.png" alt="myself2.png" title="me2">
@@ -50,7 +50,7 @@
     </div>
 </section>
 <!--Skills page-->
-<section>
+<section id="skills">
     <div>
         <h1>Skills</h1>
 <!--        pie chart -->
@@ -58,7 +58,7 @@
     </div>
 </section>
 <!--Portfolio Page-->
-<section>
+<section id="portfolio">
     <h1>Portfolio</h1>
     <div>
         <h2>Projects</h2>
@@ -85,7 +85,7 @@
     </div>
 </section>
 <!--Experience Page-->
-<section>
+<section id="experience">
     <h1>Experience</h1>
     <div>
         <h3>Heading</h3>
@@ -109,7 +109,7 @@
     </div>
 </section>
 <!--Contact Me-->
-<section>
+<section id="contact-me">
     <h1>Contact me</h1>
     Want to get in touch with me [Y/N] ?
     <br>
